--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<ag-grid-angular
-    style="width: 500px; height: 500px;"
-    class="ag-theme-alpine"
-    [rowData]="rowData"
-    [columnDefs]="columnDefs"
-    >
-</ag-grid-angular>
+
+<app-grid></app-grid>
+
+<!--<router-outlet></router-outlet>-->
+<!--<app-formupdate></app-formupdate>-->
