เอาตัวแสดงกริดกลับมาอยู่ใน app component ส่งค่าให้อยู่ในหน้าเดียวกันยังไม่ได้

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,22 @@
+<body>
 
-<app-grid></app-grid>
 
+
+<div >
+    Num:
+    <p id="selectedNum'"></p><br>
+    
+</div>
+<ag-grid-angular
+    style="width: 600px; height: 500px;"
+    class="ag-theme-alpine"
+    [rowData]="rowData"
+    [columnDefs]="columnDefs"
+    
+    selectionChanged="onSelectionChanged($event)"
+    rowSelection="single"
+>
+</ag-grid-angular>
+</body>
 <!--<router-outlet></router-outlet>-->
 <!--<app-formupdate></app-formupdate>-->
