--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,16 +1,21 @@
-
+<div>
+    Num:
+    <span id="selectedNum"></span><br>
+    
+</div>
 <ag-grid-angular
     style="width: 600px; height: 500px;"
     class="ag-theme-alpine"
-    [rowData]="rowData"
+    [modules]="modules"
     [columnDefs]="columnDefs"
-    rowSelection="single"
+    [defaultColDef]="defaultColDef"
+    [rowSelection]="rowSelection"
+    [rowData]="rowData"
+    (selectionChanged)="onSelectionChanged($event)"
+    (gridReady)="onGridReady($event)"
+    
+    
 >
 </ag-grid-angular>
 
-<div>
-    Selection:
-    <span id="selectedNum"></span><br>
-    Age:
-    <span id="selectedName"></span>
-  </div>
+<!--rowSelection="single"-->
