--- a/src/app/formupdate/formupdate.component.html
+++ b/src/app/formupdate/formupdate.component.html
@@ -4,6 +4,7 @@
 </head>
 
 <body>
+  <form>
       <table>
         <tr>
           <td align="right"><label>No.</label></td>
@@ -60,5 +61,6 @@
           </td>
         </tr>
       </table>
+  </form>
 </body>
 </html>
