--- a/src/app/formupdate/formupdate.component.scss
+++ b/src/app/formupdate/formupdate.component.scss
@@ -1,6 +1,4 @@
-
-    
 .button1 {background-color:rgb(29, 180, 29);}
 table{border: size 0.5px; border-style: groove; border-color:gray; margin: 100px 200px auto auto;}
 form{ margin:0px 0px 0px 700px;}
-    
+div{width: 300; height: 300;}
