เลือกจากตาราไปแสดงที่ฟอร์มได้แล้ว แต่ปุ่ม more detailพัง

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,83 @@
+<html>
+<head>
+    
+    <script src="script1.js"></script>
+</head>
+
 <ag-grid-angular
     #agGrid
     style="width: 600px; height: 400px;"
     class="ag-theme-alpine"
     [rowData]="rowData"
     [columnDefs]="columnDefs"
-   
     [rowSelection]="rowSelection"
-    (selectionChanged)="onSelectionChanged($event)" 
+    (selectionChanged)="onSelectionChanged($event)"
+    (click)="onSelectionChanged()" 
 >
 </ag-grid-angular>
-<div>
-    Selection:<span id="selectedNum" (ngModelChange)="selectedNum"></span>
-</div>
-<li *ngFor="let data1 of rowData"></li>
-<label>No.</label> {{data1}}
 
+<body>
+    <form>
+        <table>
+          <tr>
+            <td align="right"><label>No.</label></td>
+            <td align="left">{{selectedNum}}</td>
+          </tr>
+          <tr>
+              <td align="right"><label>Name</label></td>
+              <td><input type="text" placeholder="{{selectedName}}"></td>
+          </tr>
+          <tr> 
+              <td align="right"><label>Occupation</label></td>
+              <td><input type="text" placeholder="{{selectedJob}}"></td>
+          </tr>
+          <!--check box--> 
+          <tr>
+              <td align="right">
+                <input type="checkbox" value="N" onclick="check(this)"></td> 
+              <td><label>More Details</label></td>
+          </tr>
+          <!--check before input-->
+          <tr>
+            <td align="right"><label>BirthDate</label></td>
+            <td><input type="date" id="birth" disabled></td>
+          </tr>
+          <tr>
+            <td align="right"><label>Address</label></td>
+            <td><textarea rows="1" cols="25" id="add" disabled></textarea><br></td>
+          </tr>
+    
+          <tr>
+              <td align="right"><label>P.S.</label></td>
+              <td><textarea rows="4" cols="25" id="ps"disabled></textarea><br></td>
+          </tr>
+    
+          <!--No check before input-->
+          <tr>
+            <td align="right"><label>Attached</label></td>
+            <td><input type="file" id="file" onchange="file_size(file)"></td>
+          </tr>
+          <tr>
+            <td align="right"><label>File Name</label></td>
+            <td><label id="name_file"></label>
+    
+              <!--<input type="text" rows="1" cols="25" readonly></textarea>-->
+            
+            </td>
+          </tr>
+          <tr>
+            <td align="right"><label>File Size</label></td>
+            <td> <label id="size"> </label></td>
+          </tr>
+          <tr>
+            <td align="right">
+              <input type="submit" class="button1" value="Regist">
+            </td>
+          </tr>
+        </table>
+    </form>
+  </body>
+</html>
 <router-outlet></router-outlet>
 <!--<app-formupdate></app-formupdate>-->
 <!--selectionChanged="onSelectionChanged($event)"-->
