--- a/src/app/formupdate/formupdate.component.html
+++ b/src/app/formupdate/formupdate.component.html
@@ -8,7 +8,7 @@
       <table>
         <tr>
           <td align="right"><label>No.</label></td>
-          <td align="left"><p id="no"></p> </td>
+          <td align="left">{{selectedNum}}</td>
         </tr>
         <tr>
             <td align="right"><label>Name</label></td>
