ปุ่ม check เปิดปิด มีbug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,22 +31,22 @@
           </tr>
           <!--check box--> 
           <tr>
-              <td align="right">
-                <input type="checkbox" (click)="check(value)"></td> 
-              <td><label>More Details</label></td>
+            <td align="right">
+              <input type="checkbox" value="true" (click)="check(value)"></td> <!--check box-->
+            <td><label>More Details</label></td>
           </tr>
           <!--check before input-->
           <tr>
             <td align="right"><label>BirthDate</label></td>
-            <td><input type="date" id="birth" disabled="disabled"></td>
+            <td><input type="date" id="birth" disabled="true"></td>
           </tr>
           <tr>
             <td align="right"><label>Address</label></td>
-            <td><textarea rows="1" cols="25" id="add" disabled="disabled"></textarea><br></td>
+            <td><textarea rows="1" cols="25" id="add" disabled="true"></textarea><br></td>
           </tr>
           <tr>
               <td align="right"><label>P.S.</label></td>
-              <td><textarea rows="4" cols="25" id="ps" disabled="disabled"></textarea><br></td>
+              <td><textarea rows="4" cols="25" id="ps" disabled="true"></textarea><br></td>
           </tr>
     
           <!--No check before input-->
