--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,4 @@
 
 .button1 {background-color:rgb(29, 180, 29);}
 table{border: size 0.5px; border-style: groove; border-color:gray; margin: 100px 200px auto auto;}
+.in{ display: none;}
