--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
           <!--check box--> 
           <tr>
             <td align="right">
-              <input type="checkbox" (click)="check_en()"></td> <!--check box-->
+              <input type="checkbox" (click)="check_btn()"></td> <!--check box-->
             <td><label>More Details</label></td>
           </tr>
           <!--check before input-->
@@ -52,17 +52,15 @@
           <!--No check before input-->
           <tr>
             <td align="right"><label>Attached</label></td>
-            <td><input type="file" id="file" class="in"></td>
+            <td><input type="file" id="file" (change)="file_check($event.target.files)"></td>
           </tr>
           <tr>
             <td align="right"><label>File Name</label></td>
-            <td><label id="name_file"></label>
-              <!--<input type="text" rows="1" cols="25" readonly></textarea>-->
-            </td>
+            <td><label id="file_name" >{{file_name}}</label></td>
           </tr>
           <tr>
             <td align="right"><label>File Size</label></td>
-            <td> <label id="size"> </label></td>
+            <td> <label id="size">{{file_size}} </label></td>
           </tr>
           <tr>
             <td align="right">
