--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-//ag-grid-angular{margin: 0px 600px auto 0px;}
+//ag-grid-angular{ -webkit-overflow-scrolling: touch}
 
 .button1 {background-color:rgb(29, 180, 29);}
 table{border: size 0.5px; border-style: groove; border-color:gray; margin: 100px 200px auto auto;}
