--- a/src/app/formupdate/formupdate.component.scss
+++ b/src/app/formupdate/formupdate.component.scss
@@ -1,2 +1,7 @@
+ag-grid-angular{float: center; font-family: Roboto, Arial, sans-serif;}
+
 .button1 {background-color:rgb(29, 180, 29);}
-table{border: size 0.5px; border-style: groove; border-color:gray; margin: 100px 200px auto auto;}
+div{margin: auto 300px auto 300px;}
+table{border: size 0.5px; border-style: groove; border-color:gray; 
+    margin: 100px 200px auto auto;
+    font-family: Roboto, Arial, sans-serif;}
