--- a/src/app/dragand-drop/dragand-drop.component.html
+++ b/src/app/dragand-drop/dragand-drop.component.html
@@ -1,1 +1,52 @@
-<p>dragand-drop works!</p>
+<html>
+  <body>
+    <div class="div0">
+      <div id = 1 class="menu" draggable="true" (dragstart)="drag($event)">
+        <span>{{coffee[0]}} {{coffee[1]}} Baht</span>
+      </div>
+      <div class="menu" draggable="true" (ondragstart)="dragstart()">
+        <span>{{tea[0]}} {{tea[1]}} Baht</span>
+      </div>
+      <div class="menu clear" draggable="true" (ondragstart)="dragstart()">
+        {{water[0]}} {{water[1]}}
+      </div>
+      <div class="menu" draggable="true" (ondragstart)="dragstart()">
+        {{beer[0]}} {{beer[1]}}
+      </div>
+    </div>
+    <div class="div1">
+      <h2>PICTURE</h2>
+      <table>
+        <tr>
+          <td>
+            <input type="text" size="5" (drop)="drop($event)"  (dragover)="allowDrop($event)" value="{{selected1}}">
+            <input type="number" size="1">
+            <input type="text" size="5" value="{{selected3}}">Baht
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="text" size="5" >
+            <input type="number" size="1">
+            <input type="text" size="5"><span>Baht</span>
+          </td>
+        </tr>
+        <tr>
+          <td >
+            <input type="text" size="5">
+            <input type="number" size="1" >
+            <input type="text" size="5" ><span>Baht</span>
+          </td>
+        </tr>
+        <tr>
+          <td >
+            <input type="text" size="5">
+            <input type="number" size="1" >
+            <input type="text" size="5" ><span>Baht</span>
+          </td>
+        </tr>
+    
+      </table>
+    </div>
+  </body>
+</html>
