--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,6 @@
     @include ag-theme-alpine();
     
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
