ฟังชั่น เสร็จแล้ว

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<nav>
-  <a routerLink="/formupdate">Q1.3</a>
+<p>
+  <a routerLink="/formupdate">Q1.3</a><br>
   <a routerLink="/dragand-drop">Q1.4</a>
-</nav>
+</p>
+
 
 
 <router-outlet></router-outlet>
