--- a/src/app/dragand-drop/dragand-drop.component.html
+++ b/src/app/dragand-drop/dragand-drop.component.html
@@ -15,7 +15,6 @@
       </div>
     </div>
     <div class="div1">
-      <h2>{{count[0]}}</h2>
       <table>
         <tr>
           <td>
@@ -27,25 +26,26 @@
         <tr>
           <td>
             <input type="text" size="5" (drop)="drop($event)"  (dragover)="allowDrop($event)" value="{{menu[1]}}">
-            <input id="n2" type="number" size="1" [(ngModel)]="count[1]"  min="0">
+            <input id="n2" type="number" size="1" [(ngModel)]="count[1]" (click)="updown()" min="0">
             <input type="text" size="5" value="{{total[1]}}"><span>Baht</span>
           </td>
         </tr>
         <tr>
           <td >
             <input type="text" size="5" (drop)="drop($event)"  (dragover)="allowDrop($event)" value="{{menu[2]}}">
-            <input type="number" size="1"  [(ngModel)]="count[2]"  min="0">
+            <input type="number" size="1"  [(ngModel)]="count[2]"  (click)="updown()" min="0">
             <input type="text" size="5" value="{{total[2]}}"><span>Baht</span>
           </td>
         </tr>
         <tr>
           <td >
             <input type="text" size="5" (drop)="drop($event)"  (dragover)="allowDrop($event)" value="{{menu[3]}}">
-            <input type="number" size="1" [(ngModel)]="count[3]"  min="0">
+            <input type="number" size="1" [(ngModel)]="count[3]" (click)="updown()" min="0">
             <input type="text" size="5" value="{{total[3]}}"><span>Baht</span>
           </td>
         </tr>
       </table>
+      <h2>Total: {{sum()}}</h2>
     </div>
   </body>
 </html>
