--- a/src/app/dragand-drop/dragand-drop.component.scss
+++ b/src/app/dragand-drop/dragand-drop.component.scss
@@ -14,3 +14,4 @@ input[type=number]{
   outline: none;
 }
 input[type=text]{border-style: none; background-color: white; outline: none;}
+html{font-family: Arial, Helvetica, sans-serif;}
