--- a/src/app/dragand-drop/dragand-drop.component.scss
+++ b/src/app/dragand-drop/dragand-drop.component.scss
@@ -5,7 +5,8 @@
 
 
 /*for table*/
-.div1{border-style: solid; float: left; margin: 50px 0px 0px 50px;}
+.div1{border-style: solid; float: left; margin: 50px 0px 0px 50px; width: 280px;}
+
 td{border-style: solid; border-width: 1px;}
 input[type=number]::-webkit-inner-spin-button {opacity: 1;}
 input[type=number]{
