--- a/src/app/formupdate/formupdate.component.scss
+++ b/src/app/formupdate/formupdate.component.scss
@@ -5,3 +5,4 @@ div{margin: auto 300px auto 300px;}
 table{border: size 0.5px; border-style: groove; border-color:gray; 
     margin: 100px 200px auto auto;
     font-family: Roboto, Arial, sans-serif;}
+input[type=file]{color: transparent;}
